--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lu Yu Hsuan</h1>
-    <img src="me.jpg" width="200" />
+    <img src="me.JPG" width="200" />
     <p>Hello! I am Lu Yu Hsuan, a student at YZU IBPI.</p>
 
     <h2>Projects</h2>
