--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
 </head>
 <body>
     <h1>Lu Yu Hsuan</h1>
+
+    <!-- Your photo -->
     <img src="me.JPG" width="200" />
+
     <p>Hello! I am Lu Yu Hsuan, a student at YZU IBPI.</p>
 
     <h2>Projects</h2>
-    <ul>
-        <li>Project 1 </li>
-        <li>Project 2 </li>
-        <li>Project 3 </li>
-    </ul>
+
+    <!-- Project 1 -->
+    <h3>Project 1</h3>
+    <img src="project1.JPG" width="300">
+
+    <!-- Project 2 -->
+    <h3>Project 2</h3>
+    <img src="project2.JPG" width="300">
+
+    <!-- Project 3 -->
+    <h3>Project 3</h3>
+    <img src="project3.JPG" width="300">
 
     <h2>Contact</h2>
     <p>Email: bonnie960321@gmail.com</p>
